--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
 	  <p>This is awesome I love github and AWS</p>
+	  <p>Update all the things</p>
   </div>
 </body>
 </html>
